DeploymentConfig-hello-world.yaml
metadata:
  name: hello-world
  labels:
    app: hello-world
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
spec:
  template:
    metadata:
      labels:
        app: hello-world
        deploymentconfig: hello-world
    spec:
      dnsPolicy: ClusterFirst
      terminationGracePeriodSeconds: 30
      volumes:
      - name: cache-volume
        emptyDir: {}
      - name: liberty-overrides
        configMap:
          name: liberty-overrides
      - name: env-overrides
        configMap:
          name: env-overrides
      containers:
      - image: harbor.jkwong.cloudns.cx/jkwong-pub/hello-world:33
        imagePullPolicy: IfNotPresent
        livenessProbe:
          periodSeconds: 5
          initialDelaySeconds: 30
          httpGet:
            path: /
            port: 9080
        terminationMessagePolicy: File
        terminationMessagePath: /dev/termination-log
        resources: {}
        securityContext:
          privileged: false
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 9080
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        volumeMounts:
        - name: cache-volume
          mountPath: /opt/ibm/wlp/output
        - name: liberty-overrides
          mountPath: /config/configDropins/overrides/override-server.xml
          readOnly: true
          subPath: override-server.xml
        - name: env-overrides
          mountPath: /config/configDropins/overrides/override-env-server.xml
          readOnly: true
          subPath: override-env-server.xml
        name: hello-world
        readinessProbe:
          periodSeconds: 5
          initialDelaySeconds: 30
          httpGet:
            path: /
            port: 9080
      restartPolicy: Always
      schedulerName: default-scheduler
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - hello-world
              topologyKey: kubernetes.io/hostname
            weight: 100
  test: false
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    app: hello-world
    deploymentconfig: hello-world
  strategy:
    rollingParams:
      maxSurge: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
      maxUnavailable: 25%
      intervalSeconds: 1
    resources: {}
    type: Rolling
    activeDeadlineSeconds: 21600
  triggers:
  - type: ConfigChange
