Route-hello-world.yaml
metadata:
  name: hello-world
  labels:
    app: hello-world
apiVersion: route.openshift.io/v1
kind: Route
spec:
  tls:
    termination: edge
  to:
    name: hello-world
    weight: 100
    kind: Service
  port:
    targetPort: http-unsec
  wildcardPolicy: None
